# file-sorter

./: Cargo.toml  README.md  Rocket.toml  dev_file_config.toml
src/: main.rs
