[package]
name = "file-sorter"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
thiserror = "1.0.19"
toml = "0.5.6"
log = "0.4.8"
jsonwebtoken = {version = "5.0.0" }
chrono = { version = "0.4.11", features = ["serde"] }
